WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
219882
[css-break-3] widows: initial is not supported in multi-column container
https://bugs.webkit.org/show_bug.cgi?id=219882
Summary
[css-break-3] widows: initial is not supported in multi-column container
Gérard Talbot (no longer involved)
Reported
2020-12-14 17:59:15 PST
Test:
http://wpt.live/css/css-break/widows-orphans-015.html
Expected result:
http://wpt.live/css/css-break/reference/widows-orphans-016-ref.html
Safari 117 preview macOS 10.15 test result:
https://wpt.fyi/results/css/css-break/widows-orphans-015.html
I searched for duplicates and did not find any. This bug report is somehow related to
Bug 9410
. CSS3 Break, § 3.3. Breaks Between Lines: orphans, widows
https://www.w3.org/TR/css-break-3/#widows-orphans
Attachments
rendering in safari, firefox, chrome
(103.53 KB, image/png)
2022-11-29 04:56 PST
,
Karl Dubost
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Smoley
Comment 1
2020-12-15 18:21:50 PST
Thanks for filing, I can reproduce this on Safari 13.1.3 and STP 117.
Radar WebKit Bug Importer
Comment 2
2020-12-15 18:22:11 PST
<
rdar://problem/72366616
>
Karl Dubost
Comment 3
2022-07-12 19:47:05 PDT
***
Bug 242380
has been marked as a duplicate of this bug. ***
Karl Dubost
Comment 4
2022-07-19 04:56:13 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2539
Ahmad Saleem
Comment 5
2022-11-06 05:31:26 PST
Hi Karl - it seems this PR didn't landed it yet, was just looking at old PR, so just wanted to mention. Thanks!
Karl Dubost
Comment 6
2022-11-29 04:56:28 PST
Created
attachment 463786
[details]
rendering in safari, firefox, chrome Tested on macOS 13.3 --- Safari Technology Preview 158. 18615.1.12.110.1 Firefox Nightly 109.0a1 10922.11.27 Google Chrome Canary 110.0.5447.0 5447.0
Karl Dubost
Comment 7
2022-12-22 16:46:04 PST
I closed my initial PR. If someone wants to give it a shot.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug