[css-break-3] widows: initial is not supported in multi-column container https://bugs.webkit.org/show_bug.cgi?id=219882 <rdar://72366616>

Reviewed by NOBODY (OOPS!).

* Source/WebCore/rendering/RenderBlockFlow.cpp:
(WebCore::calculateMinimumPageHeight):

hasAutoOrphans and hasAutoWidows sets a default of lineCount to 1,
while the specification says that the initial value is 2.