Source/WebCore/rendering/RenderBlockFlow.cpp
@@ -1562,7 +1562,7 @@ static inline LayoutUnit calculateMinimumPageHeight(const RenderStyle& renderSty
 {
     // We may require a certain minimum number of lines per page in order to satisfy
     // orphans and widows, and that may affect the minimum page height.
-    unsigned lineCount = std::max<unsigned>(renderStyle.hasAutoOrphans() ? 1 : renderStyle.orphans(), renderStyle.hasAutoWidows() ? 1 : renderStyle.widows());
+    unsigned lineCount = std::max<unsigned>(renderStyle.hasAutoOrphans() ? renderStyle.initialOrphans() : renderStyle.orphans(), renderStyle.hasAutoWidows() ? renderStyle.initialWidows() : renderStyle.widows());
     if (lineCount > 1) {
         LegacyRootInlineBox* line = &lastLine;
         for (unsigned i = 1; i < lineCount && line->prevRootBox(); i++)
